--- a/api/package.json
+++ b/api/package.json
@@ -1,7 +1,7 @@
 {
   "name": "boilerbooks-api",
-  "version": "2.0.0",
-  "description": "Backend API for the Purdue IEEE boilerbooks accounting software",
+  "version": "2.2",
+  "description": "Backend API for the Boiler Books accounting software",
   "main": "src/server.js",
   "private": true,
   "type": "module",
@@ -16,26 +16,29 @@
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-rate-limit": "^6.8.0",
+    "express-rate-limit": "^6.7.0",
     "express-session": "^1.17.3",
-    "jimp": "^0.22.8",
+    "jimp": "^0.16.1",
     "memorystore": "^1.6.7",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.5.2",
-    "nodemailer": "^6.9.4",
+    "mysql2": "^2.3.3",
+    "nodemailer": "^6.9.1",
     "openid-client": "^5.1.9",
     "uuid": "^9.0.0",
-    "winston": "^3.10.0",
+    "winston": "^3.8.2",
     "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.22.9",
-    "@babel/core": "^7.22.9",
-    "@babel/node": "^7.22.6",
-    "@babel/preset-env": "^7.22.9",
-    "eslint": "^8.45.0",
-    "nodemon": "^3.0.1"
+    "@babel/cli": "^7.21.0",
+    "@babel/core": "^7.21.4",
+    "@babel/node": "^7.20.7",
+    "@babel/preset-env": "^7.21.4",
+    "eslint": "^8.38.0",
+    "nodemon": "^2.0.22"
+  },
+  "overrides": {
+    "jpeg-js": "^0.4.4"
   }
 }
