--- a/ui/package.json
+++ b/ui/package.json
@@ -1,6 +1,7 @@
 {
   "name": "boilerbooks-ui",
-  "version": "2.0.0",
+  "version": "2.2",
+  "description": "Frontend UI for the Boiler Books accounting software",
   "private": true,
   "scripts": {
     "vstring": "echo VITE_VERSION_STRING=$(git describe --tags --abbrev=0)-$(git rev-parse --abbrev-ref HEAD)-$(git rev-parse --short HEAD) > src/environment/.env.local",
@@ -11,17 +12,17 @@
     "lint": "eslint src/ --ext .js,.vue --ignore-path .gitignore && echo 'No lint errors'"
   },
   "dependencies": {
-    "@popperjs/core": "^2.11.8",
-    "bootstrap": "^5.3.0",
-    "core-js": "^3.31.1",
-    "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "@popperjs/core": "^2.11.7",
+    "bootstrap": "^5.2.3",
+    "core-js": "^3.30.0",
+    "vue": "^3.2.47",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.2.3",
-    "eslint": "^8.45.0",
-    "eslint-plugin-vue": "^9.15.1",
-    "vite": "^4.4.5"
+    "@vitejs/plugin-vue": "^4.1.0",
+    "eslint": "^8.38.0",
+    "eslint-plugin-vue": "^9.10.0",
+    "vite": "^4.2.1"
   },
   "license": "Apache 2.0"
 }
